--- a/themes/coderocks/templates/base.html
+++ b/themes/coderocks/templates/base.html
@@ -91,7 +91,7 @@
         </section><!-- /#extras -->
 
         <footer id="contentinfo" class="body">
-                <p>Powered by <a href="http://getpelican.com/">Pelican</a>. Theme <a href="https://github.com/blueicefield/pelican-blueidea/">coderocks</a>, inspired by the blueidea theme.</p>
+            {% include '_include/footer.html' %}
         </footer><!-- /#contentinfo -->
 
 {% include 'analytics.html' %}
