--- a/themes/coderocks/static/css/main.css
+++ b/themes/coderocks/static/css/main.css
@@ -382,6 +382,7 @@ img.left, figure.left {float: left; margin: 0 2em 2em 0;}
 		#extras .social a[href*='twitter.com'] {background-image: url('../images/icons/twitter.png');}
 		#extras .social a[href*='vimeo.com'] {background-image: url('../images/icons/vimeo.png');}
 		#extras .social a[href*='youtube.com'] {background-image: url('../images/icons/youtube.png');}
+        #extras .social a[href*='weibo.com'] {background-image: url('../images/icons/weibo.png');}
 
 
 /*
