--- a/themes/coderocks/templates/base.html
+++ b/themes/coderocks/templates/base.html
@@ -21,7 +21,7 @@
 <body id="index" class="home">
 {% include 'github.html' %}
 <header id="banner" class="body">
-    <h1><a href="{{ SITEURL }}/">{{ SITENAME }} {% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a>
+    <h1><a href="{{ SITEURL }}/" title="Back to Index">{{ SITENAME }}/{% if category %}{{ category }}{% endif %}</a>
     </h1>
     <nav>
         <ul>
@@ -36,14 +36,16 @@
             {% if 'http://' in pg.url -%}
             <li><a href="{{ pg.url }}">{{ pg.title }}</a></li>
             {% else %}
-            <li>{% if pg == page %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ pg.url }}">{{ pg.title }}</a>
+            <li
+            {% if pg == page %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ pg.url }}">{{ pg.title }}</a>
             </li>
             {% endif %}
             {% endfor %}
             {% endif %}
             {% if DISPLAY_CATEGORIES_ON_MENU -%}
             {% for cat, null in categories %}
-            <li>{% if cat == category %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a>
+            <li
+            {% if cat == category %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a>
             </li>
             {% endfor %}
             {% endif %}
@@ -59,7 +61,8 @@
     <div id="submenu">
         <ul>
             {% for cat, null in categories %}
-            <li>{% if cat == category %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a>
+            <li
+            {% if cat == category %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a>
             </li>
             {% endfor %}
         </ul>
