--- a/themes/coderocks/static/css/main.css
+++ b/themes/coderocks/static/css/main.css
@@ -1,12 +1,12 @@
 /*
-	Name: blueidea
-	Date: Oct 2013
+	Name: coderocks
+	Date: Aug 2015
 	Description: A Pelican theme inspired by the default theme notmyidea 
 	Version: 1.0
 	License: MIT <http://opensource.org/licenses/MIT>
 	Licensed by: Smashing Media GmbH <http://www.smashingmagazine.com/>
-	Original author: Enrique Ramírez <http://enrique-ramirez.com/>
-	Customized by : Nassim Kacha <http://www.blueicefield.com/>
+	Original author: Nassim Kacha <http://www.blueicefield.com/>
+	Customized by : Rocky Chi <http://www.rockyqi.net>
 */
 /* Imports */
 @import url("reset.css");
